add Docker-3 homework

--- a/docker-monolith/Dockerfile
+++ b/docker-monolith/Dockerfile
@@ -1,13 +1,7 @@
-FROM ubuntu:18.04
+FROM ubuntu:16.04
 
-RUN apt-get update \
-	&& apt-get install -y \
-		mongodb-server \
-		ruby-full ruby-dev \
-		build-essential \
-		git \
-	&& rm -rf /var/lib/apt/lists/*
-
+RUN apt-get update
+RUN apt-get install -y mongodb-server ruby-full ruby-dev build-essential git
 RUN gem install bundler
 RUN git clone -b monolith https://github.com/express42/reddit.git
 
@@ -15,7 +9,7 @@ COPY mongod.conf /etc/mongod.conf
 COPY db_config /reddit/db_config
 COPY start.sh /start.sh
 
-RUN cd /reddit && rm Gemfile.lock && bundle install \ 
-	&& chmod 0777 /start.sh
+RUN cd /reddit && rm Gemfile.lock && bundle install
+RUN chmod 0777 /start.sh
 
 CMD ["/start.sh"]
