--- a/kubernetes/reddit/mongo-deployment.yml
+++ b/kubernetes/reddit/mongo-deployment.yml
@@ -1,5 +1,5 @@
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo
@@ -8,6 +8,7 @@ metadata:
     component: mongo
     post-db: "true"
     comment-db: "true"
+
 spec:
   replicas: 1
   selector:
@@ -27,9 +28,9 @@ spec:
       - image: mongo:3.2
         name: mongo
         volumeMounts:
-        - name: mongo-persistent-storage
+        - name: mongo-gce-pd-storage
           mountPath: /data/db
       volumes:
-      - name: mongo-persistent-storage
+      - name: mongo-gce-pd-storage
         persistentVolumeClaim:
-          claimName:  mongo-pvc
+          claimName: mongo-pvc-dynamic
